@@ -44,7 +44,15 @@ sub configure {
 	push @flags, "-DCMAKE_VERBOSE_MAKEFILE=ON";
 
 	$this->mkdir_builddir();
-	$this->doit_in_builddir("cmake", $this->get_source_rel2builddir(), @flags, @_);
+	eval { 
+		$this->doit_in_builddir("cmake", $this->get_source_rel2builddir(), @flags, @_);
+	};
+	if ($@) {
+		if (-e $this->get_buildpath("CMakeCache.txt")) {
+			$this->doit_in_builddir("tail -v -n +0 CMakeCache.txt");
+		}
+		die $@;
+	}
 }
 
 sub test {
