@@ -15,6 +15,8 @@ debhelper (8.1.7) UNRELEASED; urgency=low
   * Correct docs about multiarch and v9. Closes: #630826
   * Fix example. Closes: #627534
   * Fix error message. Closes: #628053
+  * dh_auto_configure: If there is a problem with cmake, display
+    the CMakeCache.txt.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2011 15:24:19 -0400
 
